--- a/war/Jornada.css
+++ b/war/Jornada.css
@@ -1014,10 +1014,10 @@ input[type=checkbox].css-checkbox {
 
 ul.multiValueSuggestBox-list {
     overflow: hidden;
-    height: auto !important;
-    height: 1%;
+    height: auto !important;    
     width: 600px;
-    border: 1px solid #8496ba;
+/*     border: 1px solid #8496ba; */
+	border: 1px solid gray;
     cursor: text;
     font-size: 11px;
     font-family: Arial;
