--- a/war/Jornada.css
+++ b/war/Jornada.css
@@ -45,6 +45,12 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.labelWhite {
+  color: #ffffff;
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
   margin: 15px 6px 6px;
