--- a/war/Jornada.css
+++ b/war/Jornada.css
@@ -111,21 +111,24 @@ h1 {
 
 .fundo_tabela_componente {
   background-color: #e2e2e2;
+/*   border-left: 1px solid; */
+/*   border-left-color: gray; */
+/*   border-top: 1px solid; */
+/*   border-top-color: gray; */
+/*   border-right: 1px solid; */
+/*   border-right-color: gray; */
+/*   border-bottom: 1px solid; */
+/*   border-bottom-color: gray;    */
+/*   cursor: pointer;  */
   border-left: 1px solid;
   border-left-color: gray;
   border-top: 1px solid;
   border-top-color: gray;
   border-right: 1px solid;
-  border-right-color: gray;
+  border-right-color: black;
   border-bottom: 1px solid;
-  border-bottom-color: gray;
-/* 	  	-webkit-border-radius: 5px; */
-/* 	-moz-border-radius: 5px; */
-/* 	border-radius: 5px; */
-/* 	transition:.2s linear; */
-/*     -webkit-transition:.2s linear; */
-/*     -moz-transition:.2s linear;   */
-    
+  border-bottom-color: black;
+  cursor: pointer;  
 }
 
 .fundo_tabela_componente_over {
@@ -143,26 +146,26 @@ h1 {
 }
 .fundo_tabela_componente_down {
   background : 	#B8CCE4;
-  border-left: 1px solid;
-  border-left-color: black;
+    border-left: 1px solid;
+  border-left-color: gray;
   border-top: 1px solid;
-  border-top-color: black;
+  border-top-color: gray;
   border-right: 1px solid;
-  border-right-color: gray;
+  border-right-color: black;
   border-bottom: 1px solid;
-  border-bottom-color: gray;
+  border-bottom-color: black;
   cursor: pointer;  
+/*   border-left: 1px solid; */
+/*   border-left-color: black; */
+/*   border-top: 1px solid; */
+/*   border-top-color: black; */
+/*   border-right: 1px solid; */
+/*   border-right-color: gray; */
+/*   border-bottom: 1px solid; */
+/*   border-bottom-color: gray; */
+/*   cursor: pointer;   */
 
 }
-
-
-
-/* .label_comum { */
-/* 	font-size: 14px; */
-/* 	font-family: Arial, Helvetica, sans-serif; */
-/* 	vertical-align: top; */
-/* } */
-
 .label_comum {
 	font-size: 12px;
 	font-family: Arial, Helvetica, sans-serif;
